@@ -4,7 +4,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("series")
@@ -21,7 +20,7 @@ public class SerieController {
                 .listarSeries()
                 .stream()
                 .map(SerieConvert::serieToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PostMapping
